[gd_scene load_steps=31 format=3 uid="uid://bgu7kjysaj26v"]

[ext_resource type="PackedScene" uid="uid://c4q77be8j8uq4" path="res://Model/table.glb" id="1_4kjbv"]
[ext_resource type="PackedScene" uid="uid://7ame54nt5drs" path="res://Model/ball.glb" id="2_633ov"]
[ext_resource type="Script" path="res://Script/Player.gd" id="3_fl4ue"]
[ext_resource type="PackedScene" uid="uid://btu7yosq0a61r" path="res://Model/pistol.glb" id="4_8jfib"]
[ext_resource type="Texture2D" uid="uid://cm8pj2bwi4smd" path="res://Image/flash.png" id="5_a0aje"]
[ext_resource type="AudioStream" uid="uid://mvlboa4dvn7t" path="res://Audio/bang.ogg" id="6_82hn6"]
[ext_resource type="Texture2D" uid="uid://bo8k6rcxfc0st" path="res://Image/rug.jpg" id="7_r83kk"]
[ext_resource type="Texture2D" uid="uid://5v8yy5t3bdba" path="res://Image/wall.jpg" id="8_n6cvm"]
[ext_resource type="PackedScene" uid="uid://dmfks6y11xtxi" path="res://Scene/HUD/Screen.tscn" id="9_43n7p"]
[ext_resource type="PackedScene" uid="uid://b5ideiwhcagxp" path="res://Scene/HUD/Help.tscn" id="10_ed1ks"]
[ext_resource type="Texture2D" uid="uid://csr33gsm6ow4o" path="res://Image/pointer.png" id="11_snuc8"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_nkgor"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_020o7"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_7rtnu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tky3w"]
albedo_texture = ExtResource("7_r83kk")
uv1_scale = Vector3(5, 5, 5)

[sub_resource type="PlaneMesh" id="PlaneMesh_ndyg5"]
lightmap_size_hint = Vector2i(52, 52)
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fjf5p"]
albedo_texture = ExtResource("8_n6cvm")
uv1_scale = Vector3(3, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_drkqw"]
size = Vector2(10, 5)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cfcbg"]
albedo_texture = ExtResource("8_n6cvm")

[sub_resource type="PlaneMesh" id="PlaneMesh_w1n0n"]
flip_faces = true
size = Vector2(10, 5)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wnpln"]
albedo_texture = ExtResource("8_n6cvm")
uv1_scale = Vector3(3, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_frtm7"]
size = Vector2(10, 5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glbsn"]
albedo_texture = ExtResource("8_n6cvm")
uv1_scale = Vector3(3, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_jqsum"]
flip_faces = true
size = Vector2(10, 5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dpuxe"]

[sub_resource type="PlaneMesh" id="PlaneMesh_b0miu"]
flip_faces = true
size = Vector2(10, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8u10k"]
data = PackedVector3Array(1.8, 1.0149, -1, 1.8, 1.0149, -0.8, 1.8, 1.1, -1, 1.8, 1.1, -1, 1.8, 1.0149, -0.8, 1.8, 1.1, -0.8, 1.8, 1.0149, -1, 1.62, 1.0149, -1, 1.8, 1.0149, -0.8, 1.8, 1.0149, -0.8, 1.62, 1.0149, -1, 1.62, 1.0149, -0.8, 1.8, 1.0149, -0.8, 2, 1.0149, -0.8, 1.8, 1.1, -0.8, 1.8, 1.1, -0.8, 2, 1.0149, -0.8, 2, 1.1, -0.8, 1.62, 1.1, -1, 1.62, 1.0149, -1, 1.8, 1.1, -1, 1.8, 1.1, -1, 1.62, 1.0149, -1, 1.8, 1.0149, -1, 2, 1.1, -0.8, 2, 1.1, -0.64, 2, 1.2, -0.8, 2, 1.2, -0.8, 2, 1.1, -0.64, 2, 1.2, -0.64, -1.8, 1.2, -0.8, -1.8, 1.2, -1, 1.62, 1.2, -0.8, 1.62, 1.2, -0.8, -1.8, 1.2, -1, 1.62, 1.2, -1, 1.62, 1.2, -1, 1.8, 1.2, -1, 1.62, 1.2, -0.8, -1.8, 1.2, -0.8, 1.62, 1.2, -0.8, -1.8, 1.1, -0.8, -1.8, 1.1, -0.8, 1.62, 1.2, -0.8, 1.62, 1.1, -0.8, 1.62, 1.1, -1, 1.8, 1.1, -1, 1.62, 1.2, -1, 1.62, 1.2, -1, 1.8, 1.1, -1, 1.8, 1.2, -1, -1.8, 1.0149, -1, 1.62, 1.0149, -1, -1.8, 1.1, -1, -1.8, 1.1, -1, 1.62, 1.0149, -1, 1.62, 1.1, -1, -1.8, 1.0149, -0.8, 1.62, 1.0149, -0.8, -1.8, 1.0149, -1, -1.8, 1.0149, -1, 1.62, 1.0149, -0.8, 1.62, 1.0149, -1, 1.62, 1.0149, -0.8, 1.62, 1.0149, -0.64, 1.62, 0.0149, -0.8, 1.62, 0.0149, -0.8, 1.62, 1.0149, -0.64, 1.62, 0.0149, -0.64, 2, 1.1, -0.8, 2, 1.0149, -0.8, 2, 1.1, -0.64, 2, 1.1, -0.64, 2, 1.0149, -0.8, 2, 1.0149, -0.64, 2, 1.0149, -0.8, 1.8, 1.0149, -0.8, 2, 1.0149, -0.64, 2, 1.0149, -0.64, 1.8, 1.0149, -0.8, 1.8, 1.0149, -0.64, 2, 1.2, -0.8, 2, 1.2, -0.64, 1.8, 1.2, -0.64, 1.62, 1.2, -0.8, 1.8, 1.2, -1, 1.62, 1.1, -0.8, 1.62, 1.1, -0.8, 1.8, 1.2, -1, 1.8, 1.1, -1, 2, 1.1, -0.8, 2, 1.2, -0.8, 1.8, 1.1, -0.64, 1.8, 1.1, -0.64, 2, 1.2, -0.8, 1.8, 1.2, -0.64, -1.8, 1.0149, -0.64, 1.62, 1.0149, -0.64, -1.8, 1.0149, -0.8, -1.8, 1.0149, -0.8, 1.62, 1.0149, -0.64, 1.62, 1.0149, -0.8, -1.8, 1.2, -1, -1.8, 1.1, -1, 1.62, 1.2, -1, 1.62, 1.2, -1, -1.8, 1.1, -1, 1.62, 1.1, -1, -2.18, 1.1, 0.8, -2.18, 1.1, -0.64, -2.18, 1.2, 0.8, -2.18, 1.2, 0.8, -2.18, 1.1, -0.64, -2.18, 1.2, -0.64, 1.8, 1.2, 0.8, 1.8, 1.1, 0.8, 1.8, 1.2, -0.64, 1.8, 1.2, -0.64, 1.8, 1.1, 0.8, 1.8, 1.1, -0.64, 2, 1.2, -0.64, 2, 1.2, 0.8, 1.8, 1.2, -0.64, 1.8, 1.2, -0.64, 2, 1.2, 0.8, 1.8, 1.2, 0.8, 1.62, 1.0149, -0.64, 1.62, 1.0149, 0.8, 1.8, 1.0149, -0.64, 1.8, 1.0149, -0.64, 1.62, 1.0149, 0.8, 1.8, 1.0149, 0.8, 2, 1.0149, -0.64, 2, 1.0149, 0.8, 2, 1.1, -0.64, 2, 1.1, -0.64, 2, 1.0149, 0.8, 2, 1.1, 0.8, 1.8, 1.0149, -0.64, 1.8, 1.0149, 0.8, 2, 1.0149, -0.64, 2, 1.0149, -0.64, 1.8, 1.0149, 0.8, 2, 1.0149, 0.8, -1.98, 1.1, -0.8, -1.98, 1.0149, -0.8, -1.98, 1.1, -1, -1.98, 1.1, -1, -1.98, 1.0149, -0.8, -1.98, 1.0149, -1, -1.8, 1.0149, -0.8, -1.8, 1.0149, -1, -1.98, 1.0149, -0.8, -1.98, 1.0149, -0.8, -1.8, 1.0149, -1, -1.98, 1.0149, -1, -2.18, 1.1, -0.8, -2.18, 1.0149, -0.8, -1.98, 1.1, -0.8, -1.98, 1.1, -0.8, -2.18, 1.0149, -0.8, -1.98, 1.0149, -0.8, -1.98, 1.0149, -1, -1.8, 1.0149, -1, -1.98, 1.1, -1, -1.98, 1.1, -1, -1.8, 1.0149, -1, -1.8, 1.1, -1, -2.18, 1.2, -0.64, -2.18, 1.1, -0.64, -2.18, 1.2, -0.8, -2.18, 1.2, -0.8, -2.18, 1.1, -0.64, -2.18, 1.1, -0.8, -1.8, 1.2, -0.8, -1.98, 1.2, -1, -1.8, 1.2, -1, -1.98, 1.2, -1, -1.98, 1.1, -1, -1.8, 1.2, -1, -1.8, 1.2, -1, -1.98, 1.1, -1, -1.8, 1.1, -1, -1.8, 1.0149, 0.8, 1.62, 1.0149, 0.8, -1.8, 1.0149, -0.64, -1.8, 1.0149, -0.64, 1.62, 1.0149, 0.8, 1.62, 1.0149, -0.64, 1.8, 1.0149, 0.8, 1.62, 1.0149, 0.8, 1.8, 0.0149, 0.8, 1.8, 0.0149, 0.8, 1.62, 1.0149, 0.8, 1.62, 0.0149, 0.8, -2.18, 1.0149, -0.64, -2.18, 1.0149, -0.8, -2.18, 1.1, -0.64, -2.18, 1.1, -0.64, -2.18, 1.0149, -0.8, -2.18, 1.1, -0.8, -1.98, 1.0149, -0.64, -1.98, 1.0149, -0.8, -2.18, 1.0149, -0.64, -2.18, 1.0149, -0.64, -1.98, 1.0149, -0.8, -2.18, 1.0149, -0.8, -1.98, 1.2, -0.64, -2.18, 1.2, -0.64, -2.18, 1.2, -0.8, -1.98, 1.1, -1, -1.98, 1.2, -1, -1.8, 1.1, -0.8, -1.8, 1.1, -0.8, -1.98, 1.2, -1, -1.8, 1.2, -0.8, -1.98, 1.2, -0.64, -2.18, 1.2, -0.8, -1.98, 1.1, -0.64, -1.98, 1.1, -0.64, -2.18, 1.2, -0.8, -2.18, 1.1, -0.8, -1.98, 1.1, -0.64, -1.98, 1.1, 0.8, -1.98, 1.2, -0.64, -1.98, 1.2, -0.64, -1.98, 1.1, 0.8, -1.98, 1.2, 0.8, -1.98, 1.2, 0.8, -2.18, 1.2, 0.8, -1.98, 1.2, -0.64, -1.98, 1.2, -0.64, -2.18, 1.2, 0.8, -2.18, 1.2, -0.64, -1.98, 1.0149, 0.8, -1.8, 1.0149, 0.8, -1.98, 1.0149, -0.64, -1.98, 1.0149, -0.64, -1.8, 1.0149, 0.8, -1.8, 1.0149, -0.64, -2.18, 1.1, 0.8, -2.18, 1.0149, 0.8, -2.18, 1.1, -0.64, -2.18, 1.1, -0.64, -2.18, 1.0149, 0.8, -2.18, 1.0149, -0.64, -2.18, 1.0149, 0.8, -1.98, 1.0149, 0.8, -2.18, 1.0149, -0.64, -2.18, 1.0149, -0.64, -1.98, 1.0149, 0.8, -1.98, 1.0149, -0.64, 1.8, 1.1, 0.96, 1.8, 1.0149, 0.96, 1.8, 1.1, 1.16, 1.8, 1.1, 1.16, 1.8, 1.0149, 0.96, 1.8, 1.0149, 1.16, 1.62, 1.0149, 0.96, 1.62, 1.0149, 1.16, 1.8, 1.0149, 0.96, 1.8, 1.0149, 0.96, 1.62, 1.0149, 1.16, 1.8, 1.0149, 1.16, 2, 1.1, 0.96, 2, 1.0149, 0.96, 1.8, 1.1, 0.96, 1.8, 1.1, 0.96, 2, 1.0149, 0.96, 1.8, 1.0149, 0.96, 1.8, 1.0149, 1.16, 1.62, 1.0149, 1.16, 1.8, 1.1, 1.16, 1.8, 1.1, 1.16, 1.62, 1.0149, 1.16, 1.62, 1.1, 1.16, 2, 1.2, 0.8, 2, 1.1, 0.8, 2, 1.2, 0.96, 2, 1.2, 0.96, 2, 1.1, 0.8, 2, 1.1, 0.96, 1.62, 1.2, 1.16, -1.8, 1.2, 1.16, 1.62, 1.2, 0.96, 1.62, 1.2, 0.96, -1.8, 1.2, 1.16, -1.8, 1.2, 0.96, 1.62, 1.2, 0.96, 1.8, 1.2, 1.16, 1.62, 1.2, 1.16, -1.8, 1.1, 0.96, 1.62, 1.1, 0.96, -1.8, 1.2, 0.96, -1.8, 1.2, 0.96, 1.62, 1.1, 0.96, 1.62, 1.2, 0.96, 1.8, 1.2, 1.16, 1.8, 1.1, 1.16, 1.62, 1.2, 1.16, 1.62, 1.2, 1.16, 1.8, 1.1, 1.16, 1.62, 1.1, 1.16, -1.8, 1.1, 1.16, 1.62, 1.1, 1.16, -1.8, 1.0149, 1.16, -1.8, 1.0149, 1.16, 1.62, 1.1, 1.16, 1.62, 1.0149, 1.16, -1.8, 1.0149, 1.16, 1.62, 1.0149, 1.16, -1.8, 1.0149, 0.96, -1.8, 1.0149, 0.96, 1.62, 1.0149, 1.16, 1.62, 1.0149, 0.96, -1.8, 1.0149, 0.96, -1.8, 1.0149, 0.8, -1.8, 0.0149, 0.96, -1.8, 0.0149, 0.96, -1.8, 1.0149, 0.8, -1.8, 0.0149, 0.8, 2, 1.0149, 0.8, 2, 1.0149, 0.96, 2, 1.1, 0.8, 2, 1.1, 0.8, 2, 1.0149, 0.96, 2, 1.1, 0.96, 1.8, 1.0149, 0.8, 1.8, 1.0149, 0.96, 2, 1.0149, 0.8, 2, 1.0149, 0.8, 1.8, 1.0149, 0.96, 2, 1.0149, 0.96, 1.8, 1.2, 0.8, 2, 1.2, 0.8, 2, 1.2, 0.96, 1.8, 1.1, 1.16, 1.8, 1.2, 1.16, 1.62, 1.1, 0.96, 1.62, 1.1, 0.96, 1.8, 1.2, 1.16, 1.62, 1.2, 0.96, 1.8, 1.2, 0.8, 2, 1.2, 0.96, 1.8, 1.1, 0.8, 1.8, 1.1, 0.8, 2, 1.2, 0.96, 2, 1.1, 0.96, -1.8, 1.0149, 0.96, 1.62, 1.0149, 0.96, -1.8, 1.0149, 0.8, -1.8, 1.0149, 0.8, 1.62, 1.0149, 0.96, 1.62, 1.0149, 0.8, 1.62, 1.1, 1.16, -1.8, 1.1, 1.16, 1.62, 1.2, 1.16, 1.62, 1.2, 1.16, -1.8, 1.1, 1.16, -1.8, 1.2, 1.16, 2, 1.2, 0.8, 2, 1.2, -0.64, 2, 1.1, 0.8, 2, 1.1, 0.8, 2, 1.2, -0.64, 2, 1.1, -0.64, -1.98, 1.0149, 1.16, -1.98, 1.0149, 0.96, -1.98, 1.1, 1.16, -1.98, 1.1, 1.16, -1.98, 1.0149, 0.96, -1.98, 1.1, 0.96, -1.98, 1.0149, 1.16, -1.8, 1.0149, 1.16, -1.98, 1.0149, 0.96, -1.98, 1.0149, 0.96, -1.8, 1.0149, 1.16, -1.8, 1.0149, 0.96, -1.98, 1.0149, 0.96, -2.18, 1.0149, 0.96, -1.98, 1.1, 0.96, -1.98, 1.1, 0.96, -2.18, 1.0149, 0.96, -2.18, 1.1, 0.96, -1.8, 1.1, 1.16, -1.8, 1.0149, 1.16, -1.98, 1.1, 1.16, -1.98, 1.1, 1.16, -1.8, 1.0149, 1.16, -1.98, 1.0149, 1.16, -2.18, 1.1, 0.96, -2.18, 1.1, 0.8, -2.18, 1.2, 0.96, -2.18, 1.2, 0.96, -2.18, 1.1, 0.8, -2.18, 1.2, 0.8, -1.8, 1.2, 1.16, -1.98, 1.2, 1.16, -1.8, 1.2, 0.96, -1.8, 1.1, 1.16, -1.98, 1.1, 1.16, -1.8, 1.2, 1.16, -1.8, 1.2, 1.16, -1.98, 1.1, 1.16, -1.98, 1.2, 1.16, -1.98, 1.0149, 0.96, -1.8, 1.0149, 0.96, -1.98, 0.0149, 0.96, -1.98, 0.0149, 0.96, -1.8, 1.0149, 0.96, -1.8, 0.0149, 0.96, -2.18, 1.1, 0.96, -2.18, 1.0149, 0.96, -2.18, 1.1, 0.8, -2.18, 1.1, 0.8, -2.18, 1.0149, 0.96, -2.18, 1.0149, 0.8, -2.18, 1.0149, 0.96, -1.98, 1.0149, 0.96, -2.18, 1.0149, 0.8, -2.18, 1.0149, 0.8, -1.98, 1.0149, 0.96, -1.98, 1.0149, 0.8, -2.18, 1.2, 0.96, -2.18, 1.2, 0.8, -1.98, 1.2, 0.8, -1.8, 1.2, 0.96, -1.98, 1.2, 1.16, -1.8, 1.1, 0.96, -1.8, 1.1, 0.96, -1.98, 1.2, 1.16, -1.98, 1.1, 1.16, -2.18, 1.1, 0.96, -2.18, 1.2, 0.96, -1.98, 1.1, 0.8, -1.98, 1.1, 0.8, -2.18, 1.2, 0.96, -1.98, 1.2, 0.8, 1.8, 0.0149, -0.8, 1.62, 0.0149, -0.8, 1.8, 0.0149, -0.64, 1.8, 0.0149, -0.64, 1.62, 0.0149, -0.8, 1.62, 0.0149, -0.64, -1.8, 0.0149, -0.64, -1.8, 0.0149, -0.8, -1.98, 0.0149, -0.64, -1.98, 0.0149, -0.64, -1.8, 0.0149, -0.8, -1.98, 0.0149, -0.8, 1.62, 0.0149, 0.8, 1.62, 0.0149, 0.96, 1.8, 0.0149, 0.8, 1.8, 0.0149, 0.8, 1.62, 0.0149, 0.96, 1.8, 0.0149, 0.96, -1.98, 0.0149, 0.96, -1.8, 0.0149, 0.96, -1.98, 0.0149, 0.8, -1.98, 0.0149, 0.8, -1.8, 0.0149, 0.96, -1.8, 0.0149, 0.8, -1.98, 1.0149, -0.8, -1.98, 1.0149, -0.64, -1.98, 0.0149, -0.8, -1.98, 0.0149, -0.8, -1.98, 1.0149, -0.64, -1.98, 0.0149, -0.64, 1.62, 1.0149, 0.8, 1.62, 1.0149, 0.96, 1.62, 0.0149, 0.8, 1.62, 0.0149, 0.8, 1.62, 1.0149, 0.96, 1.62, 0.0149, 0.96, -1.98, 1.0149, 0.8, -1.98, 1.0149, 0.96, -1.98, 0.0149, 0.8, -1.98, 0.0149, 0.8, -1.98, 1.0149, 0.96, -1.98, 0.0149, 0.96, -1.98, 1.0149, -0.64, -1.8, 1.0149, -0.64, -1.98, 0.0149, -0.64, -1.98, 0.0149, -0.64, -1.8, 1.0149, -0.64, -1.8, 0.0149, -0.64, 1.8, 1.0149, -0.8, 1.62, 1.0149, -0.8, 1.8, 0.0149, -0.8, 1.8, 0.0149, -0.8, 1.62, 1.0149, -0.8, 1.62, 0.0149, -0.8, 1.8, 1.0149, -0.64, 1.8, 1.0149, -0.8, 1.8, 0.0149, -0.64, 1.8, 0.0149, -0.64, 1.8, 1.0149, -0.8, 1.8, 0.0149, -0.8, 1.62, 1.0149, 0.96, 1.8, 1.0149, 0.96, 1.62, 0.0149, 0.96, 1.62, 0.0149, 0.96, 1.8, 1.0149, 0.96, 1.8, 0.0149, 0.96, -1.8, 1.0149, -0.64, -1.8, 1.0149, -0.8, -1.8, 0.0149, -0.64, -1.8, 0.0149, -0.64, -1.8, 1.0149, -0.8, -1.8, 0.0149, -0.8, -1.8, 1.0149, 0.8, -1.98, 1.0149, 0.8, -1.8, 0.0149, 0.8, -1.8, 0.0149, 0.8, -1.98, 1.0149, 0.8, -1.98, 0.0149, 0.8, -1.8, 1.0149, -0.8, -1.98, 1.0149, -0.8, -1.8, 0.0149, -0.8, -1.8, 0.0149, -0.8, -1.98, 1.0149, -0.8, -1.98, 0.0149, -0.8, 1.62, 1.0149, -0.64, 1.8, 1.0149, -0.64, 1.62, 0.0149, -0.64, 1.62, 0.0149, -0.64, 1.8, 1.0149, -0.64, 1.8, 0.0149, -0.64, 1.8, 1.0149, 0.96, 1.8, 1.0149, 0.8, 1.8, 0.0149, 0.96, 1.8, 0.0149, 0.96, 1.8, 1.0149, 0.8, 1.8, 0.0149, 0.8, 1.62, 1.1, -0.8, 1.8, 1.1, -0.8, 1.62, 1.1, -0.64, 1.62, 1.1, -0.64, 1.8, 1.1, -0.8, 1.8, 1.1, -0.64, 1.8, 1.1, -0.64, 1.8, 1.1, 0.8, 1.62, 1.1, -0.64, 1.62, 1.1, -0.64, 1.8, 1.1, 0.8, 1.62, 1.1, 0.8, 1.8, 1.1, -0.8, 1.62, 1.1, -0.8, 1.8, 1.1, -1, 1.8, 1.1, -0.8, 2, 1.1, -0.8, 1.8, 1.1, -0.64, -1.8, 1.1, 0.8, -1.98, 1.1, 0.8, -1.8, 1.1, -0.64, -1.8, 1.1, -0.64, -1.98, 1.1, 0.8, -1.98, 1.1, -0.64, 1.62, 1.1, 0.96, -1.8, 1.1, 0.96, 1.62, 1.1, 0.8, 1.62, 1.1, 0.8, -1.8, 1.1, 0.96, -1.8, 1.1, 0.8, 1.62, 1.1, 0.8, -1.8, 1.1, 0.8, 1.62, 1.1, -0.64, 1.62, 1.1, -0.64, -1.8, 1.1, 0.8, -1.8, 1.1, -0.64, -1.98, 1.1, -0.64, -1.98, 1.1, -0.8, -1.8, 1.1, -0.64, -1.8, 1.1, -0.64, -1.98, 1.1, -0.8, -1.8, 1.1, -0.8, -1.98, 1.1, -1, -1.8, 1.1, -0.8, -1.98, 1.1, -0.8, -1.98, 1.1, -0.64, -2.18, 1.1, -0.8, -1.98, 1.1, -0.8, 1.8, 1.1, 0.8, 1.8, 1.1, 0.96, 1.62, 1.1, 0.8, 1.62, 1.1, 0.8, 1.8, 1.1, 0.96, 1.62, 1.1, 0.96, 1.8, 1.1, 1.16, 1.62, 1.1, 0.96, 1.8, 1.1, 0.96, 1.8, 1.1, 0.8, 2, 1.1, 0.96, 1.8, 1.1, 0.96, -1.8, 1.1, 0.96, -1.98, 1.1, 0.96, -1.8, 1.1, 0.8, -1.8, 1.1, 0.8, -1.98, 1.1, 0.96, -1.98, 1.1, 0.8, -1.98, 1.1, 0.96, -1.8, 1.1, 0.96, -1.98, 1.1, 1.16, -1.98, 1.1, 0.96, -2.18, 1.1, 0.96, -1.98, 1.1, 0.8, -1.8, 1.1, -0.64, -1.8, 1.1, -0.8, 1.62, 1.1, -0.64, 1.62, 1.1, -0.64, -1.8, 1.1, -0.8, 1.62, 1.1, -0.8)

[sub_resource type="SphereShape3D" id="SphereShape3D_r3lcd"]
radius = 0.0814463

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wehku"]
height = 2.28808

[sub_resource type="SpriteFrames" id="SpriteFrames_r1a83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("5_a0aje")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}]

[node name="Room" type="Node3D"]

[node name="Light" type="Node3D" parent="."]

[node name="Light1" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.45195, 4.14969, -2.68547)
omni_range = 3.0

[node name="Light2" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61542, 4.14969, -2.68547)
omni_range = 3.0

[node name="Light3" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.45195, 4.14969, 2.4286)
omni_range = 3.0

[node name="Light4" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61542, 4.14969, 2.4286)
omni_range = 3.0

[node name="SpotLight3D" type="SpotLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.48317, 0)
light_energy = 5.0

[node name="Borders" type="StaticBody3D" parent="."]

[node name="Floor" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_nkgor")

[node name="Ceil" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(0.5, 0, 0, 0, -0.5, 4.37114e-08, 0, -4.37114e-08, -0.5, 0, 4.932, 0)
shape = SubResource("WorldBoundaryShape3D_nkgor")

[node name="Wall1" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 2.5, 5)
shape = SubResource("WorldBoundaryShape3D_020o7")

[node name="Wall2" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 2.5, -5)
shape = SubResource("WorldBoundaryShape3D_020o7")

[node name="Wall3" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(-2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0, 0.5, -5, 2.5, 0)
shape = SubResource("WorldBoundaryShape3D_7rtnu")

[node name="Wall4" type="CollisionShape3D" parent="Borders"]
transform = Transform3D(-2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0, 0.5, 5, 2.5, 0)
shape = SubResource("WorldBoundaryShape3D_7rtnu")

[node name="Walls" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Walls"]
material_override = SubResource("StandardMaterial3D_tky3w")
cast_shadow = 0
mesh = SubResource("PlaneMesh_ndyg5")
skeleton = NodePath("../..")

[node name="Wall1" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.97178, 2.51618, 0)
material_override = SubResource("StandardMaterial3D_fjf5p")
mesh = SubResource("PlaneMesh_drkqw")
skeleton = NodePath("")

[node name="Wall2" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.96694, 2.49673, 0)
material_override = SubResource("StandardMaterial3D_cfcbg")
mesh = SubResource("PlaneMesh_w1n0n")
skeleton = NodePath("")

[node name="Wall3" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.48107, -5.02499)
material_override = SubResource("StandardMaterial3D_wnpln")
mesh = SubResource("PlaneMesh_frtm7")
skeleton = NodePath("")

[node name="Wall4" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.50956, 4.97969)
material_override = SubResource("StandardMaterial3D_glbsn")
mesh = SubResource("PlaneMesh_jqsum")
skeleton = NodePath("")

[node name="Ceil" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.93236, 0)
material_override = SubResource("StandardMaterial3D_dpuxe")
mesh = SubResource("PlaneMesh_b0miu")
skeleton = NodePath("")

[node name="Table" type="StaticBody3D" parent="."]

[node name="collision" type="CollisionShape3D" parent="Table"]
shape = SubResource("ConcavePolygonShape3D_8u10k")

[node name="table" parent="Table" instance=ExtResource("1_4kjbv")]

[node name="Balls" type="Node3D" parent="."]

[node name="Ball0" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13524, 1.2, 0.0356928)
mass = 0.01

[node name="ball" parent="Balls/Ball0" instance=ExtResource("2_633ov")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="Ball1" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27145, 1.2, 0.254716)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball1" instance=ExtResource("2_633ov")]

[node name="Ball2" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27145, 1.2, 0.454716)
mass = 0.01

[node name="ball" parent="Balls/Ball2" instance=ExtResource("2_633ov")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="Ball3" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27145, 1.2, 0.0466907)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball3" instance=ExtResource("2_633ov")]

[node name="Ball4" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27145, 1.2, -0.168746)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball4" instance=ExtResource("2_633ov")]

[node name="Ball5" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27145, 1.2, -0.377113)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball5" instance=ExtResource("2_633ov")]

[node name="Ball6" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05286, 1.2, 0.341814)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball6" instance=ExtResource("2_633ov")]

[node name="Ball7" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05286, 1.2, 0.133789)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball7" instance=ExtResource("2_633ov")]

[node name="Ball8" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05286, 1.2, -0.0816482)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball8" instance=ExtResource("2_633ov")]

[node name="Ball9" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05286, 1.2, -0.290015)
mass = 0.01

[node name="ball" parent="Balls/Ball9" instance=ExtResource("2_633ov")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="Ball10" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.822412, 1.2, 0.228811)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball10" instance=ExtResource("2_633ov")]

[node name="Ball11" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.822412, 1.2, 0.020786)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball11" instance=ExtResource("2_633ov")]

[node name="Ball12" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.822412, 1.2, -0.194651)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball12" instance=ExtResource("2_633ov")]

[node name="Ball13" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.617025, 1.2, 0.137603)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball13" instance=ExtResource("2_633ov")]

[node name="Ball14" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.617025, 1.2, -0.0704224)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball14" instance=ExtResource("2_633ov")]

[node name="Ball15" type="RigidBody3D" parent="Balls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.391108, 1.2, 0.0356928)
mass = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Balls/Ball15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135314, -0.00242841, 0)
shape = SubResource("SphereShape3D_r3lcd")

[node name="ball" parent="Balls/Ball15" instance=ExtResource("2_633ov")]

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)
script = ExtResource("3_fl4ue")

[node name="camera" type="Camera3D" parent="Player"]
fov = 90.0
near = 0.01

[node name="collision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.81315, 0)
shape = SubResource("CapsuleShape3D_wehku")

[node name="pistol" parent="Player" instance=ExtResource("4_8jfib")]
transform = Transform3D(-8.7423e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.7423e-09, 0, -0.5, -0.8)

[node name="marker1" type="Marker3D" parent="Player/pistol"]
transform = Transform3D(4.99999, 0, 0, 0, 4.82963, -1.29409, 0, 1.2941, 4.82962, -1, 0, 0)

[node name="marker2" type="Marker3D" parent="Player/pistol"]
transform = Transform3D(4.99999, 0, -5.96046e-08, 0, 5, 0, 5.96046e-08, 0, 4.99999, -2, 0, 0)

[node name="mf_sprite" type="AnimatedSprite3D" parent="Player/pistol"]
transform = Transform3D(-4.99999, 0, -4.37113e-07, 0, 5, 0, 4.37113e-07, 0, -4.99999, -2, 0, 0)
pixel_size = 0.001
axis = 1
sprite_frames = SubResource("SpriteFrames_r1a83")
animation = &"shoot"

[node name="mf_sound" type="AudioStreamPlayer3D" parent="Player/pistol"]
transform = Transform3D(-2.18556e-07, 0, 4.99999, 0, 5, 0, -4.99999, 0, -2.18556e-07, -1, 0, 0)
stream = ExtResource("6_82hn6")

[node name="HUD" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" parent="Player/HUD" instance=ExtResource("9_43n7p")]
layout_mode = 1

[node name="Help" parent="Player/HUD" instance=ExtResource("10_ed1ks")]
visible = false
layout_mode = 1

[node name="Cointer" type="TextureRect" parent="Player/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_snuc8")

[node name="Bullets" type="Node3D" parent="."]

[connection signal="animation_looped" from="Player/pistol/mf_sprite" to="Player" method="_on_muzzle_flash_animation_looped"]
